k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
          - path: /hello-pg
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 4173
    - host: ingress-nginx-controller.ingress-nginx.svc.cluster.local
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
          - path: /hello-pg
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 4173
